--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,14 +6,20 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: create local.properties
+      env:
+        BASE_URL: ${{ secrets.BASE_URL }}
+      run: echo BASEURL="$BASE_URL" > ./local.properties
+
+    - name: Clean
+      run: ./gradlew clean
+    - name: Build debug APK
+      run: ./gradlew assembleDebug --stacktrace
+
