--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,12 @@ android {
     }
     buildTypes {
 
+        def propFile=rootProject.file("./local.properties")
+        def properties = new Properties()
+        properties.load(new FileInputStream(propFile))
 
-        Properties properties = new Properties()
-        properties.load(project.rootProject.file("local.properties").newDataInputStream())
-        def baseUrl = properties.getProperty("BASEURL", "")
+        def baseUrl = properties['BASEURL']
+        //getProperty("BASEURL", "")
 
 
         debug {
@@ -57,7 +59,7 @@ dependencies {
     def retrofit2_version = "2.5.0"
     def okhttp3_version = "3.12.0"
     def kotlinCoroutineVersion = "1.0.1"
-    def dagger_version = "2.16"
+    def dagger_version = "2.20"
 
 
     //Moshi
