MINOR REFRACTORING and added androidTest (#2)
added androidTest and minor refractor

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Clean
       run: ./gradlew clean
+    - name: Run Test
+      run: ./gradlew assembleDebugAndroidTest
     - name: Build debug APK
       run: ./gradlew assembleDebug --stacktrace
 
